--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -17,7 +17,7 @@ bugs will be fixed in 1.x going forward.
 
 * New improved URLs to pages via `usedirs`.
 * [[plugins/OpenID]] support, enabled by default.
-* [[plugins/write||interface]] added, with some 60 [[plugins]] available,
+* Plugin [[plugins/write|interface]] added, with some 60 [[plugins]] available,
   greatly expanding the capabilities of ikiwiki.
 * [[Tags]], atom feeds, and generally full-fledged blogging support.
 * Fully working [[todo/utf8]].
