web commit by JoshTriplett: Improve formatting of the OpenID provider example, and remove an extra backslash.

--- a/doc/openid.mdwn
+++ b/doc/openid.mdwn
@@ -35,5 +35,5 @@ registration process when using OpenID.
 It's also possible to make a page in the wiki usable as an OpenID url,
 by delegating it to an openid server. Here's an example of how to do that:
 
-	\\[[meta openid="http://yourid.myopenid.com/"
-	server="http://www.myopenid.com/server"]]
+	\[[meta openid="http://yourid.myopenid.com/"
+	       server="http://www.myopenid.com/server"]]
