Add passwordauth to basewiki.mdwn.

--- a/doc/basewiki.mdwn
+++ b/doc/basewiki.mdwn
@@ -11,6 +11,7 @@ It currently includes these pages:
 * [[markdown]]
 * [[openid]]
 * [[pagespec]]
+* [[passwordauth]]
 * [[PreprocessorDirective]]
 * [[shortcuts]]
 * [[smileys]]
