web commit by JoshTriplett: Future goals: More documentation in the basewiki, including documentation for all enabled plugins.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -41,6 +41,7 @@ backwards compatability.
 
 * Improved [[todo/html]] stylesheets and templates.
   _(status: [[css_market]] exists; it could always provide more stylesheets.  No alternate templates yet, though.)_
+* More documentation in the basewiki, including documentation for all enabled plugins.  Probably need some solution for [[todo/conditional_underlay_files]], too.
 * Conversion support for existing other wikis.
   (Being worked on for MoinMoin and TWiki by [[Josh_Triplett|JoshTriplett]]
   and Jamey Sharp; support for other wikis should fit into the same
