--- a/doc/todo/conditional_underlay_files.mdwn
+++ b/doc/todo/conditional_underlay_files.mdwn
@@ -1,7 +1,8 @@
 I'd like to see some way to include certain files from the underlay only when the wiki has certain plugins enabled.  For example:
 
 * Only include smileys.mdwn and the smileys subdirectory if you enable the [[plugins/smiley]] plugin.
-* Only include openid.mdwn if you enable the [[plugins/openid]] plugin.
+* Exclude openid.mdwn if you disable the [[plugins/openid]] plugin.
+* Exclude passwordauth.mdwn if you disable the [[plugins/passwordauth]] plugin.
 * Include shortcuts.mdwn only if you enable the [[plugins/shortcut]] plugin.
 * Include blog.mdwn only if you don't disable the [[plugins/inline]] plugin.
 * Include favicon.ico only if you enable the [[plugins/favicon]] plugin.
