--- a/doc/passwordauth.mdwn
+++ b/doc/passwordauth.mdwn
@@ -6,7 +6,9 @@ This wiki has passwordauth **enabled**.
 
 You can sign into this wiki by entering a username and password in the login
 form.  If you don't have an account, you can register for one from the login
-form by hitting the "Register" button.
+form by hitting the "Register" button.  If you have an account, but you have
+forgotten your password, you can hit the "Mail Password" button to receive your
+password via an email to the address you supplied when you registered.
 
 [[if test="enabled(openid) and openid"
      then="You can also sign into this wiki using [[OpenID]]."]]
