--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -5,12 +5,12 @@ methods, do other [[type/useful]] stuff, add [[type/chrome]] to the
 wiki, or just have [[type/fun]].
 
 There's documentation if you want to [[write]] your own plugins, or you can
-install and use plugins [[contributed|contrib]] by others. 
+install and use plugins [[contributed|contrib]] by others.
 
-The [[mdwn]], [[inline]], [[htmlscrubber]], [[passwordauth]], [[openid]],
-[[signinedit]], [[lockedit]], and [[conditional]] plugins are enabled
-by default. To enable other plugins, use the `--plugin` switch described in
+To enable plugins, use the `--plugin` switch described in
 [[usage]], or the equivalent `add_plugins` line in [[ikiwiki.setup]].
+Enable the [[goodstuff]] plugin to get a nice selection of plugins that
+will fit most uses of ikiwiki.
 
 # Plugin directory
 
