--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -29,7 +29,7 @@ bugs will be fixed in 1.x going forward.
 * Some support for other markup languages than markdown: rst, textile.
 * Unit test suite, with more than 300 tests.
 
-Will be released 29 April 2007.
+Released 30 April 2007.
 
 The 2.x series is expected to undergo continuing development for some time,
 adding improvements and new features, but avoiding changes that break
