--- a/doc/todo/Adjust_goodstuff.mdwn
+++ b/doc/todo/Adjust_goodstuff.mdwn
@@ -1,6 +1,10 @@
 Need to re-evaluate the contents of [[plugins/goodstuff]] based on external dependencies.
 
 * Possibly drop [[plugins/img]] due to PerlMagick dependency, and [[plugins/otl]] due to vimoutliner dependency.
-* Possibly add [[plugins/favicon]], [[plugins/more]], and [[plugins/table]] due to lack of external dependencies.
+* Add [[plugins/favicon]] and [[plugins/more]] due to lack of external dependencies.
+
+Alternatively, if including items that have minor external dependencies:
+
+* Possibly add [[plugins/table]].
 
 --[[JoshTriplett]]
