Add ikirev shortcut for revisions in the ikiwiki repository.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -22,6 +22,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.info/%s/"]]
+* [[shortcut name=ikirev url="http://ikiwiki.info/cgi-bin/viewvc.cgi?view=rev&root=ikiwiki&revision=%s"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 * [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt" desc="RFC %s"]]
 * [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
