--- a/doc/todo/Improve_signin_form_layout.mdwn
+++ b/doc/todo/Improve_signin_form_layout.mdwn
@@ -1,1 +1,1 @@
-In SVN commits 3478, 3480, 3482, and 3485, I added a fieldset around the passwordauth fields, and some additional documentation.  However, this needs some additional work to work correctly with the registration part of the form, as well as the buttons.  It may also need some CSS love, and some means to style multiple formbuilder fieldsets differently.  I reverted these four commits to avoid regressions before the 2.0 release; after the release, we should look at it again. --[[JoshTriplett]]
+In SVN commits [[ikirev 3478]], [[ikirev 3480]], [[ikirev 3482]], and [[ikirev 3485]], I added a fieldset around the passwordauth fields, and some additional documentation.  However, this needs some additional work to work correctly with the registration part of the form, as well as the buttons.  It may also need some CSS love, and some means to style multiple formbuilder fieldsets differently.  I reverted these four commits to avoid regressions before the 2.0 release; after the release, we should look at it again. --[[JoshTriplett]]
