web commit by enodev

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -22,4 +22,11 @@ Conversely, how about adding a plugin to support exporting to LaTeX?
 
 >>> Have a look at [pandoc](http://code.google.com/p/pandoc/).  It can make PDFs via pdflatex. --[[roktas]]
 
+----
+
+[here](http://ng.l4x.org/gitweb/gitweb.cgi?p=ikiwiki.git/.git;a=blob;f=IkiWiki/Plugin/latex.pm) is a first stab at
+a latex plugin. Examples [here](http://ng.l4x.org/latex/). Currently without image support for hevea. And the latex2html
+output has the wrong charset and no command line switch to change that. Dreamland.
+
+
 [[tag soc]]
