web commit by http://meta.ath0.com/: Snork.

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -18,6 +18,8 @@ do ë characters work? Sure.
 
 OpenID test. It works!!
 
+Hupple hupple hupple hupple snork.
+
 Test..
 
 There are Polish diacritical characters: ą, ć, ę, ł, ń, ó, ś, ż, ź.
