--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ikiwiki (2.1) UNRELEASED; urgency=low
+
+  * Use div layout for the signin and preferences forms, so that they can be
+    styled using the stylesheet, rather than by creating signin and prefs
+    templates.
+  * Make the openid login form nicely styled.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Apr 2007 17:53:10 -0400
+
 ikiwiki (2.00) unstable; urgency=low
 
   [ Josh Triplett ]
