* Fix a bug that prevented clearing email or subscriptions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (2.1) UNRELEASED; urgency=low
     styled using the stylesheet, rather than by creating signin and prefs
     templates.
   * Make the openid login form nicely styled.
+  * Fix a bug that prevented clearing email or subscriptions.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 30 Apr 2007 17:53:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Apr 2007 18:04:02 -0400
 
 ikiwiki (2.00) unstable; urgency=low
 
