--- a/doc/bugs/clearing_email_in_prefs.mdwn
+++ b/doc/bugs/clearing_email_in_prefs.mdwn
@@ -1,3 +1,5 @@
 If a user has an email address in their prefs, and they try to clear it,
 the prefs seem to save ok, and the email seems to be gone, but reloading
 the prefs page will reveal the old email address.
+
+Also affected subscriptions.. [[done]]
