web commit by JoshTriplett: Fix typo.

--- a/doc/plugins/toc.mdwn
+++ b/doc/plugins/toc.mdwn
@@ -1,7 +1,7 @@
 [[template id=plugin name=toc author="[[Joey]]"]]
 [[tag type/chrome]]
 
-Add a table of contents be to a page:
+Add a table of contents to a page:
 
 	\[[toc ]]
 
