--- a/doc/bugs/wiki_formatting_does_not_work_between_toc_and_an_inline.mdwn
+++ b/doc/bugs/wiki_formatting_does_not_work_between_toc_and_an_inline.mdwn
@@ -1,4 +1,13 @@
-Wiki formatting between `\[[toc ]]` and an inline fails to render.  The problem does not seem to trigger if the inline uses the titlepage template, or if it doesn't match any pages.  See example below; also reproducible with a single-file wiki containing the text below, rendered via `ikiwiki --plugin toc`.
+Wiki formatting between `\[[toc ]]` and an inline fails to render.  The
+problem does not seem to trigger if the inline uses the titlepage template,
+or if it doesn't match any pages.  See example below; also reproducible
+with a single-file wiki containing the text below, rendered via `ikiwiki
+--plugin toc`.
+
+> This is [[debbug 421843]], and I suspect it affects certian other plugins
+> that also use empty divs as placeholders. It's fixed in markdown 1.0.2 b7
+> (available in debian experimental). So I'll [[close|done]] this as it's
+> not really an ikiwiki bug. --[[Joey]]
 
 [[toc ]]
 
@@ -19,4 +28,3 @@ Wiki formatting between `\[[toc ]]` and an inline fails to render.  The problem 
 # heading rendered
 
 [a link](http://ikiwiki.info)
-
