--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -51,6 +51,7 @@ Personal sites and blogs
 * [Ben Coffey's blog and personal site](http://inelegant.org/).
 * [blog of LukClaes](http://zomers.be/~luk/blog/).
 * [Per Olofsson](http://people.dsv.su.se/~pelle/)
+* [Effective Programming](http://effectiveprogramming.com/)
 
 Please feel free to add your own ikiwiki site!
 
