fix created_after limits

--- a/doc/patchqueue.mdwn
+++ b/doc/patchqueue.mdwn
@@ -6,5 +6,5 @@ Feel free to either copy the patch inline, or link to one elsewhere (or nag
 patches directly).
 
 [[inline pages="patchqueue/* and !*/Discussion"
-feedpages="created_after(enable-htaccess-files)"
+feedpages="created_after(patchqueue/enable-htaccess-files)"
 rootpage="patchqueue" archive="yes"]]
