--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -16,5 +16,5 @@ will fit most uses of ikiwiki.
 
 [[inline pages="plugins/* and !plugins/type/* and !plugins/write and
 !plugins/contrib and !*/Discussion"
-feedpages="created_after(graphviz)" archive="yes"
+feedpages="created_after(plugins/graphviz)" archive="yes"
 rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
