web commit by JoshTriplett: Fix typo.

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -17,5 +17,5 @@ files..)
 
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using any of the stylesheets above. For example, if
-using Epiphany with the Select Stylesheet extention enabled, use View ->
+using Epiphany with the Select Stylesheet extension enabled, use View ->
 Style.  In Firefox or Iceweasel, use View -> Page Style.
