--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -52,6 +52,7 @@ Personal sites and blogs
 * [blog of LukClaes](http://zomers.be/~luk/blog/).
 * [Per Olofsson](http://people.dsv.su.se/~pelle/)
 * [Effective Programming](http://effectiveprogramming.com/)
+* [Embedded Moose](http://embeddedmoose.com), Andrew Greenberg's personal and consulting page.
 
 Please feel free to add your own ikiwiki site!
 
