Add Embedded Moose stylesheet to CSS market.

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -15,6 +15,10 @@ files..)
   You can see it in action on [kirkambar](http://kirkambar.net/) (Turkish content).
   [[meta stylesheet="kirkambar"]]
 
+* **[[css_market/embeddedmoose.css]]**, contributed by [[JoshTriplett]].
+  Designed for [Embedded Moose](http://embeddedmoose.com).  Some ideas from the
+  Debian lighttpd index.html page.
+
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using any of the stylesheets above. For example, if
 using Epiphany with the Select Stylesheet extension enabled, use View ->
