Fix meta stylesheet tag.

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -18,7 +18,7 @@ files..)
 * **[[css_market/embeddedmoose.css]]**, contributed by [[JoshTriplett]].
   Designed for [Embedded Moose](http://embeddedmoose.com).  Some ideas from the
   Debian lighttpd index.html page.
-  [[meta stylesheet="embeddedmoose.css"]]
+  [[meta stylesheet="embeddedmoose"]]
 
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using any of the stylesheets above. For example, if
