--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -20,3 +20,5 @@ Furthermore the git instructions should be changed to move the *.ikiwiki*
 directory back into the wiki's working copy directory, isn't it? --[[tschwinge]]
 
 Curious as to why support for CVS is not built in. --[[Luther]]
+
+> See [[todo/CVS_backend|todo/CVS_backend]], but you might consider switching to a better version control system. --[[JoshTriplett]]
