web commit by http://adam.shand.net/

--- a/doc/bugs/login_page_non-obvious_with_openid.mdwn
+++ b/doc/bugs/login_page_non-obvious_with_openid.mdwn
@@ -43,3 +43,5 @@ If you want to keep it as one form, then perhaps using some javascript to disabl
 
 > I've improved the form, I think it's more obvious now that the openid
 > stuff is separate. Good enough to call this [[done]]. I think. --[[Joey]]
+
+>> Looks good, thanks!  :-) -- [[AdamShand]]
