--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -18,6 +18,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=gnomebug url="http://bugzilla.gnome.org/show_bug.cgi?id=%s" desc="GNOME bug #%s"]]
 * [[shortcut name=marcmsg url="http://marc.info/?i=%s"]]
+* [[shortcut name=marclist url="http://marc.info/?l=%s"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
