--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ ikiwiki (2.1) UNRELEASED; urgency=low
     templates.
   * Make the openid login form nicely styled.
   * Fix a bug that prevented clearing email or subscriptions.
+  * Improve handling of edits of locked pages by users who are not yet signed
+    in.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 30 Apr 2007 18:04:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 07 May 2007 02:02:53 -0400
 
 ikiwiki (2.00) unstable; urgency=low
 
