web commit by JoshTriplett: Add shortcut gmsg to search for a Message-ID in Google Groups.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -7,6 +7,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
 * [[shortcut name=archive url="http://web.archive.org/*/%s"]]
 * [[shortcut name=gmap url="http://maps.google.com/maps?q=%s"]]
+* [[shortcut name=gmsg url="http://groups.google.com/groups?selm=%s"]]
 * [[shortcut name=wikipedia url="http://en.wikipedia.org/wiki/%s"]]
 * [[shortcut name=wikitravel url="http://wikitravel.org/en/%s"]]
 * [[shortcut name=debbug url="http://bugs.debian.org/%s" desc="bug #%s"]]
