web commit by JoshTriplett: Add link to Debian request-tracker.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -15,6 +15,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=debpkg url="http://packages.debian.org/%s"]]
 * [[shortcut name=debpts url="http://packages.qa.debian.org/%s"]]
 * [[shortcut name=debmsg url="http://lists.debian.org/msgid-search/%s"]]
+* [[shortcut name=debrt url="https://rt.debian.org/Ticket/Display.html?id=%s"]]
 * [[shortcut name=fdobug url="https://bugs.freedesktop.org/show_bug.cgi?id=%s" desc="freedesktop.org bug #%s"]]
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=gnomebug url="http://bugzilla.gnome.org/show_bug.cgi?id=%s" desc="GNOME bug #%s"]]
