--- a/doc/templates/plugin.mdwn
+++ b/doc/templates/plugin.mdwn
@@ -3,7 +3,7 @@ Plugin: <TMPL_VAR name><br />
 Author: <TMPL_VAR author><br />
 Included in ikiwiki: [[if test="sourcepage(plugins/contrib/*)" then="""no""" else="""yes"""]]<br />
 Enabled by default: <TMPL_IF core>yes<TMPL_ELSE>no</TMPL_IF><br />
-Included in [[/plugins/goodstuff]]: [[if test="backlink(plugins/goodstuff) and /plugins/<TMPL_VAR name> and !sourcepage(plugins/contrib/*)" then="""yes""" else="""no"""]]<br />
+Included in [[/plugins/goodstuff]]: [[if test="backlink(plugins/goodstuff) and plugins/<TMPL_VAR name> and !sourcepage(plugins/contrib/*)" then="""yes""" else="""no"""]]<br />
 Currently enabled: [[if test="enabled(<TMPL_VAR name>)" then="yes" else="no"]]<br />
 </span>
 [[if test="sourcepage(plugins/contrib/*)" then="""[[meta title="<TMPL_VAR name> (third party plugin)"]]"""]]
