--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ ikiwiki (2.1) UNRELEASED; urgency=low
   * Improve handling of edits of locked pages by users who are not yet signed
     in.
   * Make testpagespec more robust, including checking for missing/bad
-    parameters, and detecting if a pagespec failed to compile.
+    parameters.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 08 May 2007 17:21:13 -0400
 
