--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,10 @@ ikiwiki (2.1) UNRELEASED; urgency=low
   * Add all=no option to conditional, can be used to form conditionals that do
     not need to examine every page in the wiki.
   * Use this to simplify the goodstuff detection in the plugin template.
+  * Add the needsbuild hook. Plugins can use this to manipulate which files
+    ikiwiki builds when refreshing the wiki.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 08 May 2007 20:12:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 08 May 2007 20:44:27 -0400
 
 ikiwiki (2.00) unstable; urgency=low
 
