--- a/debian/changelog
+++ b/debian/changelog
@@ -20,7 +20,10 @@ ikiwiki (2.1) UNRELEASED; urgency=low
     set in the wiki setup, passwordauth will require the password in
     order to create an account.
 
- -- Josh Triplett <josh@freedesktop.org>  Tue, 08 May 2007 19:05:21 -0700
+  [ Joey Hess ]
+  * Updated Czech translation from Miroslav Kure.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 09 May 2007 16:01:28 -0400
 
 ikiwiki (2.00) unstable; urgency=low
 
