--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -21,6 +21,8 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=gnomebug url="http://bugzilla.gnome.org/show_bug.cgi?id=%s" desc="GNOME bug #%s"]]
 * [[shortcut name=marcmsg url="http://marc.info/?i=%s"]]
 * [[shortcut name=marclist url="http://marc.info/?l=%s"]]
+* [[shortcut name=gmane url="http://dir.gmane.org/gmane.%s" desc="gmane.%s"]]
+* [[shortcut name=gmanemsg url="http://news.gmane.org/find-root.php?message_id=%s"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
