--- a/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
+++ b/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
@@ -20,3 +20,5 @@ because it seems that my `find` doesn't support `-L` option. I had to patch
         done
 
 -- Pawel
+
+[[applied|done]], thanks --[[Joey]]
