--- a/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
+++ b/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
@@ -31,6 +31,8 @@ Indeed, the misc.tmpl, recentchanges.tmpl and editpage.tmpl templates lack such 
 
 >> I can update the patch, if you want to follow and test this idea. --Fred
 
+>>> Sure, go ahead --[[Joey]]
+
 This patch is against current svn.
 
 	Index: templates/recentchanges.tmpl
