--- a/doc/tips/redirections_for_usedirs.mdwn
+++ b/doc/tips/redirections_for_usedirs.mdwn
@@ -20,3 +20,14 @@ be adapted to other situations.
 	RewriteCond $1 !^/~
 	RewriteCond $1 !.*/index$
 	RewriteRule (.+).atom$ $1/index.atom
+
+The following example is exactly the same thing written for lighttpd by using mod_redirect:
+
+    $HTTP["url"] !~ "^/(~|doc/|ajaxterm|cgi-bin/)" {
+      $HTTP["url"] !~ "^/(.*/index\.(html|rss|atom))" {
+        url.redirect = ( 
+          "(.*)\.html$" => "$1/",
+          "(.*)\.(atom|rss)$" => "$1/index.$2"     
+        )
+      } 
+    } 
