--- a/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
+++ b/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
@@ -33,43 +33,114 @@ Indeed, the misc.tmpl, recentchanges.tmpl and editpage.tmpl templates lack such 
 
 >>> Sure, go ahead --[[Joey]]
 
-This patch is against current svn.
+>>>>Here is an updated patch against current svn. --Fred
 
 	Index: templates/recentchanges.tmpl
 	===================================================================
-	--- templates/recentchanges.tmpl        (révision 3543)
+	--- templates/recentchanges.tmpl        (révision 3575)
 	+++ templates/recentchanges.tmpl        (copie de travail)
-	@@ -64,6 +64,8 @@
-	 </div>
-	 
-	 <!-- from <TMPL_VAR NAME=WIKINAME> -->
-	+<div id="footer">
+	@@ -12,7 +12,11 @@
+	 </TMPL_IF>
+	 </head>
+	 <body>
+	+<div id="banner">
 	+</div>
 	 
+	+<div id="content-wrap">
+	+
+	 <div class="header">
+	 <span>
+	 <TMPL_VAR INDEXLINK>/ <TMPL_VAR TITLE>
+	@@ -65,5 +69,10 @@
+	 
+	 <!-- from <TMPL_VAR NAME=WIKINAME> -->
+	 
+	+</div>
+	+
+	+<div id="realfooter">
+	+</div>
+	+
+	 </body>
+	 </html>
+	Index: templates/page.tmpl
+	===================================================================
+	--- templates/page.tmpl (révision 3575)
+	+++ templates/page.tmpl (copie de travail)
+	@@ -13,7 +13,11 @@
+	 <TMPL_IF NAME="META"><TMPL_VAR META></TMPL_IF>
+	 </head>
+	 <body>
+	+<div id="banner">
+	+</div>
+	 
+	+<div id="content-wrap">
+	+
+	 <div class="header">
+	 <span>
+	 <TMPL_LOOP NAME="PARENTLINKS">
+	@@ -95,5 +99,10 @@
+	 <TMPL_IF EXTRAFOOTER><TMPL_VAR EXTRAFOOTER></TMPL_IF>
+	 </div>
+	 
+	+</div>
+	+
+	+<div id="realfooter">
+	+</div>
+	+
 	 </body>
 	 </html>
 	Index: templates/editpage.tmpl
 	===================================================================
-	--- templates/editpage.tmpl     (révision 3543)
+	--- templates/editpage.tmpl     (révision 3575)
 	+++ templates/editpage.tmpl     (copie de travail)
-	@@ -86,5 +86,7 @@
+	@@ -12,6 +12,11 @@
+	 </TMPL_IF>
+	 </head>
+	 <body>
+	+<div id="banner">
+	+</div>
+	+
+	+<div id="content-wrap">
+	+
+	 <TMPL_IF NAME="PAGE_CONFLICT">
+	 <p>
+	 <b>Your changes conflict with other changes made to the page.</b>
+	@@ -86,5 +91,11 @@
 	 <TMPL_VAR PAGE_PREVIEW>
 	 </div>
 	 </TMPL_IF>
-	+<div id="footer">
+	+
 	+</div>
+	+
+	+<div id="realfooter">
+	+</div>
+	+
 	 </body>
 	 </html>
 	Index: templates/misc.tmpl
 	===================================================================
-	--- templates/misc.tmpl (révision 3543)
+	--- templates/misc.tmpl (révision 3575)
 	+++ templates/misc.tmpl (copie de travail)
-	@@ -22,6 +22,8 @@
- 	<div id="content">
-	 <TMPL_VAR PAGEBODY>
-	 </div>
-	+<div id="footer">
+	@@ -12,7 +12,11 @@
+	 </TMPL_IF>
+	 </head>
+	 <body>
+	+<div id="banner">
 	+</div>
 	 
+	+<div id="content-wrap">
+	+
+	 <div class="header">
+	 <span>
+	 <TMPL_VAR INDEXLINK>/ <TMPL_VAR TITLE>
+	@@ -23,5 +27,10 @@
+	 <TMPL_VAR PAGEBODY>
+	 </div>
+	 
+	+</div>
+	+
+	+<div id="realfooter">
+	+</div>
+	+
 	 </body>
 	 </html>
