web commit by http://ptecza.myopenid.com/: * Thanks

--- a/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
+++ b/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
@@ -22,3 +22,5 @@ because it seems that my `find` doesn't support `-L` option. I had to patch
 -- Pawel
 
 [[applied|done]], thanks --[[Joey]]
+
+> Thank you! :) --Pawel
