--- a/doc/bugs/Insecure_dependency_in_eval_while_running_with_-T_switch.mdwn
+++ b/doc/bugs/Insecure_dependency_in_eval_while_running_with_-T_switch.mdwn
@@ -15,7 +15,7 @@ Temporarily I've disabled conditional plugin to avoid that bug.
 
 PS. I still use ikiwiki 1.50 backported for Debian 'sarge'.
 
--- Pawel
+--Pawel
 
 ---
 
@@ -67,7 +67,7 @@ because `patch` command fails:
 Could you please fix that patch?  I guess how to do it, but I don't want
 to break the code I distribute in my backport ;)
 
--- Pawel
+--Pawel
 
 > It's not my patch.. IIRC my suggestion was simply to do this: --[Joey]]
 
@@ -84,3 +84,10 @@ to break the code I distribute in my backport ;)
 	 	return IkiWiki::FailReason->new("syntax error") if $@;
 	 	return $ret;
 	 } #}}}
+
+>> Thanks a lot, Joey! It works :)
+>>
+>> BTW, I was quite sure that you sent me the old patch via e-mail long time ago.
+>> Maybe I found it at old ikiwiki home page? I don't remember it now.
+>>
+>> --Pawel
