--- a/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
+++ b/doc/bugs/Add_a_footer_div_on_all_pages_to_improve_theming.mdwn
@@ -144,3 +144,6 @@ Indeed, the misc.tmpl, recentchanges.tmpl and editpage.tmpl templates lack such 
 	+
 	 </body>
 	 </html>
+
+> I took a more intrusive approach to avoid ugly names like "realfooter".
+> [[done]] --[[Joey]]
