web commit by hb: typo

--- a/doc/bugs/pagestats_plugin_broken.mdwn
+++ b/doc/bugs/pagestats_plugin_broken.mdwn
@@ -10,4 +10,4 @@ return allways 2, which seems to me "obvious", because the backlinks() function 
 
 Did I forget something ?
 
---[hb]
+--[[users/hb]]
