--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,10 @@ ikiwiki (2.1) UNRELEASED; urgency=low
     inconsistencies.
   * Allow WIKINAME to to used in footers, as an example of something to put
     there.
+  * Patch from hb to fix the pagestats plugin, which was broken by a past
+    change to the backlinks() function.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 11 May 2007 15:35:12 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 May 2007 13:55:19 -0400
 
 ikiwiki (2.00) unstable; urgency=low
 
