use a tag cloud for plugin types

--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -1,8 +1,6 @@
-Most of ikiwiki's [[features]] are implemented as plugins. Beyond the
-[[type/core]] features, there are plugins to [[type/format]] text,
-use [[type/tags]], show [[type/meta]] information, add [[type/auth]]
-methods, do other [[type/useful]] stuff, add [[type/chrome]] to the
-wiki, or just have [[type/fun]].
+Most of ikiwiki's [[features]] are implemented as plugins.
+
+[[pagestats pages="plugins/type/* and !plugins/type/slow"]]
 
 There's documentation if you want to [[write]] your own plugins, or you can
 install and use plugins [[contributed|contrib]] by others.
