web commit by KarlMW

--- a/doc/tips/switching_to_usedirs/discussion.mdwn
+++ b/doc/tips/switching_to_usedirs/discussion.mdwn
@@ -11,4 +11,4 @@ OK, now that I've written this out, I see a solution.  The include for the synta
 
 I'll leave this ramble here in case anyone has anything to say about it.  Thank you for listening  :-)
 
--- KarlMW
+-- [[KarlMW]]
