web commit by KarlMW

--- a/doc/tips/switching_to_usedirs/discussion.mdwn
+++ b/doc/tips/switching_to_usedirs/discussion.mdwn
@@ -12,3 +12,10 @@ OK, now that I've written this out, I see a solution.  The include for the synta
 I'll leave this ramble here in case anyone has anything to say about it.  Thank you for listening  :-)
 
 -- [[KarlMW]]
+
+------
+This may serve only to highlight my naivete, but what are the advantages of the usedirs approach?  I'm not passionately against the option, and I'm confident that there must be benefits for it to have become the default in ikiwiki - I just don't understand why.
+
+It seems to me that the only advantage is slightly tidier URLs, but with the disadvantage that source files change dir level and relative links need to change too.
+
+-- [[KarlMW]]
